--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Set up Java environment
         uses: actions/setup-java@v3
         with:
-          java-version: 1.8
-          distribution: temurin
+          distribution: 'adopt'
+          java-version: '8'
           server-id: sonatype-nexus-staging
           server-username: ${{ secrets.OSSRH_USER }}
           server-password: ${{ secrets.OSSRH_PASSWORD }}
