--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -23,24 +23,36 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Set up Maven Central Repository
+      - name: Set up Java environment
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-          server-id: sonatype-nexus-staging
-          server-username: ${{ secrets.OSSRH_USER }}
-          server-password: ${{ secrets.OSSRH_PASSWORD }}
-          gpg-passphrase:  ${{ secrets.GPG_PASSWORD }}
-      - id: install-secret-key
-        name: Install gpg secret key
-        run: |
-          cat <(echo -e "${{ secrets.GPG_SECRET }}") | gpg --batch --import
-          gpg --list-secret-keys --keyid-format LONG
+          distribution: temurin
+          gpg-private-key: ${{ secrets.GPG_SECRET }}
+          gpg-passphrase: MAVEN_CENTRAL_GPG_PASSPHRASE
+      - name: Build
+        id: build
+        run: mvn -B -U -Dsurefire.rerunFailingTestsCount=5 clean install
       - if: github.event.release || github.event_name == 'workflow_dispatch'
-        name: Release Maven package
-        uses: samuelmeuli/action-maven-publish@v1
+        name: Deploy SNAPSHOT / Release
+        uses: camunda-community-hub/community-action-maven-release@v1
         with:
-          gpg_private_key: ${{ secrets.GPG_SECRET }}
-          gpg_passphrase: ${{ secrets.GPG_PASSWORD }}
-          nexus_username: ${{ secrets.OSSRH_USER }}
-          nexus_password: ${{ secrets.OSSRH_PASSWORD }}
+          release-version: ${{ github.event.release.tag_name }}
+          release-profile: community-action-maven-release
+          nexus-usr: ${{ secrets.OSSRH_USER }}
+          nexus-psw: ${{ secrets.GPG_PASSWORD }}
+          maven-usr: ${{ secrets.OSSRH_USER }}
+          maven-psw: ${{ secrets.GPG_PASSWORD }}
+          maven-gpg-passphrase: ${{ secrets.GPG_PASSWORD }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+        id: release
+      - if: github.event.release
+        name: Attach artifacts to GitHub Release (Release only)
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ${{ steps.release.outputs.artifacts_archive_path }}
+          asset_name: ${{ steps.release.outputs.artifacts_archive_path }}
+          asset_content_type: application/zip
