--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -24,11 +24,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Set up Java environment
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 1.8
           distribution: temurin
-          gpg-private-key: ${{ secrets.GPG_SECRET }}
+          gpg-private-key: ${{ secrets.MAVEN_CENTRAL_GPG_SIGNING_KEY_SEC }}
           gpg-passphrase: MAVEN_CENTRAL_GPG_PASSPHRASE
       - name: Build
         id: build
@@ -39,11 +39,11 @@ jobs:
         with:
           release-version: ${{ github.event.release.tag_name }}
           release-profile: community-action-maven-release
-          nexus-usr: ${{ secrets.OSSRH_USER }}
-          nexus-psw: ${{ secrets.GPG_PASSWORD }}
-          maven-usr: ${{ secrets.OSSRH_USER }}
-          maven-psw: ${{ secrets.GPG_PASSWORD }}
-          maven-gpg-passphrase: ${{ secrets.GPG_PASSWORD }}
+          nexus-usr: ${{ secrets.NEXUS_USR }}
+          nexus-psw: ${{ secrets.NEXUS_PSW }}
+          maven-usr: ${{ secrets.MAVEN_CENTRAL_DEPLOYMENT_USR }}
+          maven-psw: ${{ secrets.MAVEN_CENTRAL_DEPLOYMENT_PSW }}
+          maven-gpg-passphrase: ${{ secrets.MAVEN_CENTRAL_GPG_SIGNING_KEY_PASSPHRASE }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
         id: release
       - if: github.event.release
