--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -31,7 +31,7 @@ jobs:
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
           gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
 
-      - if: github.event.release || github.event_name == 'release'
+      - if: github.event.release || github.event_name == 'workflow_dispatch'
         name: Publish to Maven Central Repo
         uses: samuelmeuli/action-maven-publish@v1
         with:
