--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,13 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <!-- Prevent `gpg` from using pinentry programs -->
+          <gpgArguments>
+            <arg>--pinentry-mode</arg>
+            <arg>loopback</arg>
+          </gpgArguments>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
