build(ci): remove Java 8 release job

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>cn.lzgabel.converter</groupId>
@@ -40,13 +41,13 @@
   <distributionManagement>
 
     <repository>
-      <id>maven_nexus_repo</id>
-      <name>maven_nexus_repo</name>
+      <id>ossrh</id>
+      <name>ossrh</name>
       <url>https://s01.oss.sonatype.org/content/repositories/releases/</url>
     </repository>
     <snapshotRepository>
-      <id>maven_nexus_repo</id>
-      <name>maven_nexus_repo</name>
+      <id>ossrh</id>
+      <name>ossrh</name>
       <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
   </distributionManagement>
@@ -199,7 +200,7 @@
             <excludes>
               <exclude>**/target/**/*.md</exclude>
             </excludes>
-            <flexmark />
+            <flexmark/>
           </markdown>
         </configuration>
         <executions>
@@ -219,12 +220,20 @@
         <version>1.6</version>
         <executions>
           <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
             <goals>
               <goal>sign</goal>
             </goals>
-            <phase>verify</phase>
           </execution>
         </executions>
+        <configuration>
+          <!-- Prevent `gpg` from using pinentry programs -->
+          <gpgArguments>
+            <arg>--pinentry-mode</arg>
+            <arg>loopback</arg>
+          </gpgArguments>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
@@ -232,7 +241,7 @@
         <version>1.6.7</version>
         <extensions>true</extensions>
         <configuration>
-          <serverId>maven_nexus_repo</serverId>
+          <serverId>ossrh</serverId>
           <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
