--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -36,6 +36,10 @@ jobs:
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
           gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
       - if: github.event.release || github.event_name == 'workflow_dispatch'
+        name: Prepare release version
+        run: mvn versions:set -DnewVersion=${{ github.event.release.tag_name }}
+        shell: bash
+      - if: github.event.release || github.event_name == 'workflow_dispatch'
         name: Publish to Maven Central Repo
         uses: samuelmeuli/action-maven-publish@v1
         with:
