--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -35,9 +35,9 @@ jobs:
           distribution: temurin
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
           gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
-      - name: Build
-        id: build
-        run: mvn -B -U -Dsurefire.rerunFailingTestsCount=5 clean install
+      - name: Test
+        id: test
+        run: mvn -B -U -Dsurefire.rerunFailingTestsCount=5 clean test
       - name: Archive Test Results on Failure
         uses: actions/upload-artifact@v3
         if: failure()
