--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,14 @@
   </distributionManagement>
 
   <properties>
+    <commons-collections.version>3.2.2</commons-collections.version>
+    <commons-lang3.version>3.12.0</commons-lang3.version>
+    <guava.version>23.0</guava.version>
+    <jackson.version>2.13.4</jackson.version>
     <java.version>1.8</java.version>
+    <json-schema-validator.version>1.0.73</json-schema-validator.version>
+    <junit.version>4.13.2</junit.version>
+    <lombok.version>1.18.24</lombok.version>
     <plugin.version.googlejavaformat>1.7</plugin.version.googlejavaformat>
     <plugin.version.spotless>2.29.0</plugin.version.spotless>
 
@@ -69,37 +76,42 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>22.0</version>
+      <version>${guava.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.12.0</version>
+      <version>${commons-lang3.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
-      <version>3.2.2</version>
+      <version>${commons-collections.version}</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.24</version>
+      <version>${lombok.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <version>${junit.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version>2.13.4</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.13.4</version>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.networknt</groupId>
+      <artifactId>json-schema-validator</artifactId>
+      <version>${json-schema-validator.version}</version>
     </dependency>
   </dependencies>
 
