--- a/pom.xml
+++ b/pom.xml
@@ -39,20 +39,6 @@
     <url>https://github.com/lzgabel/camunda-cloud-bpmn-converter</url>
   </scm>
 
-  <distributionManagement>
-
-    <repository>
-      <id>ossrh</id>
-      <name>ossrh</name>
-      <url>https://s01.oss.sonatype.org/content/repositories/releases/</url>
-    </repository>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <name>ossrh</name>
-      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
-
   <properties>
     <assertj-core.version>3.27.3</assertj-core.version>
     <commons-collections.version>3.2.2</commons-collections.version>
@@ -199,6 +185,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.4.1</version>
+        <configuration>
+          <failOnError>false</failOnError>
+          <show>protected</show>
+          <nohelp>true</nohelp>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -256,15 +247,14 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.13</version>
+        <groupId>org.sonatype.central</groupId>
+        <artifactId>central-publishing-maven-plugin</artifactId>
+        <version>0.7.0</version>
         <extensions>true</extensions>
         <configuration>
-          <serverId>ossrh</serverId>
-          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+          <publishingServerId>lzgabel-ossrh</publishingServerId>
         </configuration>
       </plugin>
 
